Fixed dropdown menu not formatting correctly on smaller sreens. Removed node_modules from repo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,4 +385,11 @@ p {
   #work {
     padding-bottom: 0px;
   }
+  .featured-work-header {
+    display: block;
+  }
+
+  .select-css {
+    margin-top: 20px;
+  }
 }
